# codegen-cli

./: .gitignore  .pre-commit-config.yaml  .releaserc  README.md  hatch.toml  pyproject.toml  setup.py
.codegen/: config.toml
.codegen/codemods/: sample_codemod.py
.github/workflows/: cache-warm-up.yml  pre-commit.yml  release.yml  semantic-release.yml  test.yml
codegen/: __init__.py  cli.py  config.py
codegen-sh/: .gitignore  config.json  config.json.template  config.toml  state.toml
codegen-sh/typings/: __builtins__.pyi
codegen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: handle_config_files.py
src/codegen/: .config.template  .env.prod  .env.template  authorization.py  cli.py  config.py  decorator.py  endpoints.py  env.py  errors.py  function.py  modal.py  models.py  skills.py
src/codegen/analytics/: constants.py  decorators.py  posthog_tracker.py  tracker.py  utils.py
src/codegen/api/: client.py  endpoints.py  modal.py  schemas.py  webapp_routes.py
src/codegen/auth/: decorator.py  jwt.py  login.py  session.py  token_manager.py
src/codegen/cli/: cli.py  decorator.py
src/codegen/codemod/: convert.py
src/codegen/commands/: create.py  docs_search.py  expert.py  init.py  login.py  logout.py  profile.py  run.ipynb  run.py  set_active.py
src/codegen/diff/: pretty_print.py
src/codegen/docs/: deploying-functions.md
src/codegen/env/: global_env.ipynb  global_env.py
src/tracker/: tracker.py
tests/: test_global_env.py  test_simple.py
tests/integration/: conftest.py  test_init_command.py  test_run_command.py
(+55 files in other folders)
