[project]
name = "codegen-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "requests",
    "pathlib",
    "algoliasearch",
    "rich",
]
[project.scripts]
codegen = "codegen.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
