[project]
name = "codegen-sh"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click", "requests", "pathlib", "algoliasearch", "rich"]
dynamic = ["version", "urls"]
[project.scripts]
codegen = "codegen.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4"]
[tool.uv]
cache-keys = [{ git = { commit = true } }]
